<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ash">

    <Button
        android:id="@+id/btn_contact_list2"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="304dp"
        android:layout_height="102dp"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_contact_list"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email_2" />

    <TextView
        android:id="@+id/txt_name_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="26dp"
        android:text="@string/txt_name_2"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="194dp"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:contentDescription="@string/imageView2"
        android:rotationY="-6"
        app:layout_constraintBottom_toTopOf="@+id/txt_address_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_name_2"
        app:srcCompat="@drawable/ash_os" />

    <TextView
        android:id="@+id/txt_phone_number_2"
        android:layout_width="293dp"
        android:layout_height="48dp"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="16dp"
        android:text="@string/txt_phone_number_2"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_email_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_address_2" />

    <TextView
        android:id="@+id/txt_address_2"
        android:layout_width="280dp"
        android:layout_height="51dp"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="18dp"
        android:text="@string/txt_address_2"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_phone_number_2"
        app:layout_constraintStart_toStartOf="@+id/txt_phone_number_2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/txt_email_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="10dp"
        android:text="@string/txt_email_2"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_contact_list2"
        app:layout_constraintStart_toStartOf="@+id/btn_contact_list2"
        app:layout_constraintTop_toBottomOf="@+id/txt_phone_number_2" />

</androidx.constraintlayout.widget.ConstraintLayout>